--- a/src/components/process/Tower/Styles/Temperature.scss
+++ b/src/components/process/Tower/Styles/Temperature.scss
@@ -1,3 +1,27 @@
 .temp {
-    
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    .dot {
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        background-color: black;
+    }
+    .line {
+        width: 150px;
+        height: 5px;
+        background-color: black;
+    }
+    .manometer {
+        border: 3px solid black;
+        width: 200px;
+        height: 200px;
+        &_temp {
+            transform: scale(0.4);
+            margin-top: -110px;
+            margin-left: -70px;
+        }
+    }
 }
