--- a/src/components/process/Tower/Styles/Tower.scss
+++ b/src/components/process/Tower/Styles/Tower.scss
@@ -1,3 +1,12 @@
 .tower {
     margin-bottom: 80px;
+    position: relative;
+    .temp {
+        top: 10px;
+        left:145px;
+    }
+    .cooling {
+        top: 240px;
+        left: 220px;
+    }
 }
